--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ authors = ["Ryosuke Hayashi"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-grpcio = "*"
-grpcio-tools = "*"
 langchain = "*"
+celery = "^5.4.0"
+fastapi = "^0.115.8"
+uvicorn = "^0.34.0"
+redis = "^5.0.1"
+python-dotenv = "^1.0.1"
+langchain-openai = "^0.3.6"
+langgraph = "^0.2.74"
+langchain-community = "^0.3.18"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.7"
