--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ celery = "^5.4.0"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
 redis = "^5.0.1"
-python-dotenv = "^1.0.1"
 langchain-openai = "^0.3.6"
 langgraph = "^0.2.74"
 langchain-community = "^0.3.18"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.7"
