--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -11,7 +11,7 @@ COPY tau tau/
 
 # Install dependencies
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi
+    && poetry install --no-interaction --no-ansi --without dev
 
 # Expose the port FastAPI runs on
 EXPOSE 8000
