--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ langchain-openai = "^0.3.6"
 langgraph = "^0.2.74"
 langchain-community = "^0.3.18"
 httpx = "^0.28.1"
+langchain-anthropic = "^0.3.8"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.7"
