--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -15,7 +15,8 @@ services:
     depends_on:
       - redis
     environment:
-      - REDIS_URL=redis://redis:6379
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     command:  ["poetry", "run", "uvicorn", "tau:api", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     volumes:
       - .:/app
@@ -29,7 +30,8 @@ services:
     depends_on:
       - redis
     environment:
-      - REDIS_URL=redis://redis:6379
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     command:  ["watchmedo", "auto-restart", "-d", ".", "-R", "--", "poetry", "run", "celery", "-A", "tau.worker", "worker", "--loglevel=info", "--uid=nobody", "--gid=nogroup"]
     volumes:
       - .:/app
