--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,28 @@
-[tool.poetry]
+[project]
 name = "tau"
 version = "0.1.0"
 description = "tau agent"
-authors = ["Ryosuke Hayashi"]
+authors = [
+    {name = "Ryosuke Hayashi"}
+]
+requires-python = ">=3.12"
+dependencies = [
+    "httpx>=0.28.1",
+    "mcp>=1.4.1",
+    "anthropic>=0.49.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-httpx = "^0.28.1"
-mcp = "^1.4.1"
-anthropic = "^0.49.0"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.9.7"
+[project.scripts]
+tau = "tau.main:main"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.9.7",
+]
 
 [tool.ruff]
 line-length = 88
