--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "tau agent"
 authors = [
     {name = "Ryosuke Hayashi"}
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "httpx>=0.28.1",
     "mcp>=1.4.1",
