--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
 ]
 
 [project.scripts]
-tau = "tau.main:main"
+tau-chat = "tau.main:chat"
+tau-json-server = "tau.main:json_server"
 
 [build-system]
 requires = ["setuptools>=61.0"]
