--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "mcp>=1.4.1",
     "anthropic>=0.49.0",
     "boto3>=1.37.17",
+    "pydantic>=2.10.6",
 ]
 
 [project.scripts]
